<resources>
    <string name="app_name">SQLIteExample</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="correo">Correo</string>
    <string name="guardar">Guardar</string>
    <string name="buscar">Buscar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="lista">lista</string>
</resources>
